[package]
name = "aliexp"
version = "0.0.1"
edition = "2021"
authors = ["BEN ABDELHAMID Fethi"]
description = "Unofficial Rust AliExpress Open platform SDK (iop-sdk-rust-20231210)"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fethienv/iop-sdk-rust.git"

exclude = [
    ".env",
    ".gitignore",
    "target/*",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22" , features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
hmac = "0.12.1"
itertools = "0.12.0"
md-5 = "0.10.6"
digest = "0.10.7"
dotenv-vault = "0.1.1"

#serde = { version = "1.0.193", features = ["derive"] }
#serde_json = "1.0.108"
#chrono = "0.4.31"
#ring = "0.17.6"
#data-encoding = "2.5.0"